fix values for overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,7 +73,7 @@ body::-webkit-scrollbar {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hide;
+    overflow: hidden;
     border-radius: 10px;
     background-color: white;
 }
@@ -385,10 +385,9 @@ body::-webkit-scrollbar {
 
 #about_ul {
     list-style-type: none;
-    margin: 0;
     padding: 0;
-    margin-left: 23%;
-    overflow: hide;
+    margin: 0 0 0 23%;
+    overflow: hidden;
     border-radius: 10px;
     background-color: white;
 }
@@ -455,10 +454,10 @@ a {
     display: block;
     position: fixed;
     text-align: center;
-    align-items: center
-    -webkit-box-shadow: 0px 0px 23px -5px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 23px -5px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 23px -5px rgba(0, 0, 0, 0.75);
+    align-items: center;
+    -webkit-box-shadow: 0 0 23px -5px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0 0 23px -5px rgba(0, 0, 0, 0.75);
+    box-shadow: 0 0 23px -5px rgba(0, 0, 0, 0.75);
     border-radius: 10px;
     top: 50%;
     left: 50%;
@@ -889,7 +888,9 @@ a {
 	background-color: white;
 	margin-left: 20%;
 	padding-top: 30px;
-}*/
+}
+*/
+
 #events_container {
     z-index: -1;
     margin-left: 3%;
@@ -899,7 +900,6 @@ a {
 #ico_cal_current_date_btn {
     position: absolute;
     margin-top: -5px;
-    position: absolute;
     margin-top: -40px;
 }
 
